--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "vite build",
     "dev": "vite dev",
-    "package": "vite build && zip -r ../stylish-pins-ext.zip ./dist"
+    "build:package": "vite build && zip -r ../stylish-pins-ext.zip ./dist"
   },
   "keywords": [],
   "author": "",
